# sample-repo-microservice

./: .gitignore  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-test.yml  codeql.yml  container-scan.yml  deploy-staging.yml
ADRs/: 0000-template.md  0001-runtime-and-ci-cd.md
docs/: CODING_STANDARDS.md  RUNBOOK_deploy.md  RUNBOOK_incident_response.md  RUNBOOK_rollback.md
infra/bicep/: main.bicep  parameters.example.json
infra/terraform/: main.tf  outputs.tf  variables.tf
microservices/hello-fastapi/: Dockerfile  README.md  pyproject.toml
microservices/hello-fastapi/app/: main.py
microservices/hello-fastapi/tests/: test_health.py  test_integration.py
