[project]
name = "hello-fastapi"
version = "1.0.0"
dependencies = [
    "fastapi>=0.114.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings --cov=app --cov-report=xml"
testpaths = ["tests"]
